Alignment fixes due to new font

--- a/src/styles/blocks/_badge.sass
+++ b/src/styles/blocks/_badge.sass
@@ -4,16 +4,17 @@
   align-items: center
   background: rgba($clr-grey, $light-opacity)
   color: $clr-white
-  font-weight: 700
+  font-weight: 500
   line-height: 1
 
   &--small
-    padding: $gutter-width/7 $gutter-width/3
-    border-radius: $big-radius
-    font-size: 12px
+    height: 19px
+    padding: .1em $gutter-width/3 0
+    border-radius: $base-radius
+    font-size: 11px
 
   &--medium
-    top: 0.1em
-    padding: $gutter-width/5 $gutter-width/2.5
-    border-radius: $huge-radius
-    font-size: 70%
+    height: 24px
+    padding: 0.1em $gutter-width/2.5 0
+    border-radius: $big-radius
+    font-size: 12px
