--- a/src/styles/blocks/_sidebar.sass
+++ b/src/styles/blocks/_sidebar.sass
@@ -229,6 +229,8 @@ $icons-size: 24px
 
 
   &__menu
+    user-select: none
+    
     @media #{$mb-dw}
       display: flex
       justify-content: space-between
