--- a/src/styles/core/_colors.sass
+++ b/src/styles/core/_colors.sass
@@ -3,12 +3,12 @@ $clr-dark: #24242F
 $clr-white: #ffffff
 $clr-grey: #e5e5e5
 
-$clr-dashboard: #5e2d9e
+$clr-dashboard: #563b96
 $clr-games: #c44e4e
 $clr-tvshows: #3976bb
 $clr-films: #319ac4
 $clr-anime: #bd3a91
-$clr-books: #32a899
+$clr-books: #2bad7c
 
 $clr-info: #889157
 $clr-success: #678f3f
